# pyExSi

./: .gitignore  .travis.yml  CONTRIBUTING.rst  README.md  Showcase.ipynb  pyproject.toml  readme.rst  requirements.dev.txt  requirements.txt  setup.py  signal_generation.py
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: code.rst  conf.py  examples.rst  index.rst
docs/source/examples/: example_nonstationarity.rst  example_signals.rst
example/: example.py  example_nonstationarity.py  example_signals.py
pyExSi/: __init__.py  signals.py
signal_generation/: __init__.py  signal_generation.py  signals.py  test_scipy_chirp.py
test/: test_basic.py  test_data.pkl
tests/: generate_freezed_data.py  test_basic.py  test_data_nonstationarity.pkl  test_data_signals.pkl  test_scipy_chirp.py
